--- a/compose_test/src/requirements.txt
+++ b/compose_test/src/requirements.txt
@@ -1,8 +1,13 @@
 attrs==19.3.0
 certifi==2020.6.20
 chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
 idna==2.10
 iniconfig==1.0.1
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
 more-itertools==8.4.0
 packaging==20.4
 pluggy==0.13.1
@@ -10,10 +15,12 @@ py==1.9.0
 pyparsing==2.4.7
 pytest==6.0.1
 PyYAML==5.3.1
+redis==3.5.3
 requests==2.24.0
 ruamel.appconfig==0.5.4
 ruamel.std.argparse==0.8.3
 six==1.15.0
 toml==0.10.1
 urllib3==1.25.10
+Werkzeug==1.0.1
 yaml-1.3==0.1.0
