--- a/compose_test/docker/docker-compose.yml
+++ b/compose_test/docker/docker-compose.yml
@@ -3,6 +3,10 @@ services:
   web:
     build: ../
     ports:
-    - "5000:5000"
+    - "5010:5000"
   redis:
     image: "redis:3.0.7"
+  networks:
+    custom_net:
+      external:
+        name: jenkins_net
