修改端口号

--- a/compose_test/docker/docker-compose.yml
+++ b/compose_test/docker/docker-compose.yml
@@ -7,6 +7,6 @@ services:
   redis:
     image: "redis:3.0.7"
   networks:
-    custom_net:
+    default:
       external:
         name: jenkins_net
