--- a/compose_test/Dockerfile
+++ b/compose_test/Dockerfile
@@ -3,4 +3,5 @@ COPY src/ /opt/src
 WORKDIR /opt/src
 RUN pip install -r requirements.txt
 #CMD ["python","app.py"]
-CMD source /opt/src/start.sh
+#CMD source /opt/src/start.sh
+CMD ["pytest","-v","-m","/api_test/api/testcases/*"]
