修改端口号

--- a/compose_test/Dockerfile
+++ b/compose_test/Dockerfile
@@ -2,6 +2,6 @@ FROM python/python3.8.5:v1.0
 COPY src/ /opt/src
 WORKDIR /opt/src
 RUN pip install -r requirements.txt
-#CMD ["python","app.py"]
+CMD ["python","app.py"]
 #CMD source /opt/src/start.sh
-CMD ["pytest","-v","-m","/api_test/api/testcases/*"]
+#CMD ["pytest","-v","-m","/api_test/api/testcases/*"]
