--- a/compose_test/Dockerfile
+++ b/compose_test/Dockerfile
@@ -1,5 +1,6 @@
 FROM python/python3.8.5:v1.0
 COPY src/ /opt/src
+RUN echo "copy"
 WORKDIR /opt/src
 RUN pip install -r requirements.txt
 CMD ["python","app.py"]
