修改端口号

--- a/compose_test/Dockerfile
+++ b/compose_test/Dockerfile
@@ -1,6 +1,6 @@
 FROM python/python3.8.5:v1.0
-COPY ../../m3_api_test/ /opt/m3_api_test
-WORKDIR /opt/m3_api_test/compose_test/src
+COPY src/ /opt/src
+WORKDIR /opt/src
 RUN pip install -r requirements.txt
 CMD ["python","app.py"]
 #CMD source /opt/src/start.sh
