--- a/compose_test/docker/docker-compose.yml
+++ b/compose_test/docker/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     ports:
       - "5011:5000"
     volumes:
-      - ../../m3_api_test:/opt/m3_api_test
+      - ../src:/opt/src
   redis:
     image: "redis:3.0.7"
