--- a/compose_test/Dockerfile
+++ b/compose_test/Dockerfile
@@ -4,4 +4,4 @@ WORKDIR /opt/src
 RUN pip install -r requirements.txt
 CMD ["python","app.py"]
 #CMD source /opt/src/start.sh
-#CMD ["pytest","-v","-m","/api_test/api/testcases/*"]
+CMD ["python","-m","pytest","-v","/api_test/api/testcases/*"]
